# sat-circuits-engine

./: .gitignore  README.md  circuit.py  constraints_format.md  constraints_format.txt  demo.ipynb  demos.html  demos.ipynb  engine.py  handle_solutions.py  interface.py  main.ipynb  parse.py  pip_freeze.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  single_constraint_parse_test_data.json  test_data.txt  tox.ini
.github/workflows/: main.yml
.ipynb_checkpoints/: main-checkpoint.ipynb
circuit/: __init__.py  engine.py
classical_processing/: __init__.py  handle_solutions.py
data/: test_data.json
interface/: interface.py
sat_circuits_engine/: __init__.py  main.ipynb  main.py
sat_circuits_engine/DRAFT/: Kakuro_First.ipynb  Kakuro_First.ipynb:Zone.Identifier  Kakuro_Second.ipynb  Kakuro_Second.ipynb:Zone.Identifier  Kakuro_Third.ipynb  Kakuro_Third.ipynb:Zone.Identifier  Untitled.ipynb  draft.py
sat_circuits_engine/circuit/: __init__.py  draft_fourier_adder.py  engine.py  grover_constraints_operator.py  grover_diffuser.py  overall_sat_circuit.py  single_constraint.py
sat_circuits_engine/classical_processing/: __init__.py  classical_solver.py  classical_verifier.py  constraints_string.py  handle_solutions.py
sat_circuits_engine/constraints_parse/: DRAFT_DELETE.py  __init__.py  constraints_parse.py  single_constraint_parse.py
sat_circuits_engine/data/: constraints_format.txt  test_data.json
sat_circuits_engine/interface/: __init__.py  circuit_decomposition.py  (+4 more)
test/: __init__.py
util/: __init__.py  decorators.py  settings.py
(+116 files in other folders)
